# cookci

./: .gitignore  LICENSE  README.md  cookci.cabal  run-cook
cook/: base-deps.cook  cookci.cook  root.cook
src/: Main.hs  Tests.hs
src/Cook/Ci/: ArgParse.hs  Core.hs  Dequeue.hs  Process.hs  Types.hs
